Fix spacing of dev icons on mobile

--- a/src/scss/components/_icons.scss
+++ b/src/scss/components/_icons.scss
@@ -32,7 +32,7 @@
         }
         display: inline-block;        
     }
-    .dev-icon:not(:last-child) {
-        margin-right: 1.5rem;
-    }
+    // .dev-icon:not(:last-child) {
+    //     margin-right: 1.5rem;
+    // }
 }
